[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypervisor-dashboard-agent"
version = "0.1.3"
description = "System observer/renderer agent — URI dashboard for hypervisor autonomy"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "resource-agent-hypervisor",
    "urish",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
server = ["uvicorn>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hypervisor_dashboard_agent*"]

[tool.setuptools.package-data]
hypervisor_dashboard_agent = ["templates/*", "static/*"]

[tool.uv.sources]
hypervisor = { path = "../hypervisor", editable = true }
resource-agent-hypervisor = { path = "../resource-agent-hypervisor", editable = true }
urish = { path = "../urish", editable = true }
uri3 = { path = "../uri3", editable = true }
uri2voice = { path = "../uri2voice", editable = true }
